--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -1,20 +1,51 @@
-.button {
+.menu-background {
+    -fx-background-color: #eeeeef;
+}
+
+.drawie-title {
+    -fx-font-size: 72px;
+    -fx-font-family: Arial;
+    -fx-fill: linear-gradient(to right, #00000080, #eeeeee);
+}
+
+.custom-button {
+    -fx-font-family: "Arial";
+    -fx-font-size: 12px;
+    -fx-text-fill: #2d2d2d;
+    -fx-background-color: #CCCCCC;
+    -fx-alignment: center;
+    -fx-background-radius: 5px;
     -fx-min-width: 24px;
     -fx-min-height: 24px;
-    -fx-background-color: #CCCCCC;
-    -fx-border-radius: 5px;
     -fx-padding: 0px;
 }
 
-.button:hover {
+.custom-button:hover {
     -fx-background-color: #D2D2D7;
 }
 
-.button:pressed {
+.custom-button:pressed {
     -fx-background-color: #9a9a9f;
 }
 
-.color-picker{
+.text-field {
+    -fx-font-family: "Arial";
+    -fx-prompt-text-fill: #b5b5b5;
+    -fx-font-size: 12px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-background-color: white;
+    -fx-border-color: #cccccc;
+    -fx-border-width: 1px;
+    -fx-text-fill: #b5b5b5;
+    -fx-alignment: center;
+}
+
+.text-field:hover {
+    -fx-border-width: 2px;
+}
+
+.color-picker {
     -fx-min-width: 30px;
     -fx-pref-height: 24px;
     -fx-background-color: #CCCCCC;
@@ -53,20 +84,6 @@
 
 .slider:hover {
     -fx-background-color: #D2D2D7;
-}
-
-.text-field {
-    -fx-border-radius: 5px;
-    -fx-background-radius: 5px;
-    -fx-background-color: white;
-    -fx-border-color: #cccccc;
-    -fx-border-width: 1px;
-    -fx-text-fill: #b5b5b5;
-    -fx-alignment: center;
-}
-
-.text-field:hover {
-    -fx-border-width: 2px;
 }
 
 .toggle-button {
