--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -11,7 +11,7 @@
 .custom-button {
     -fx-font-family: "Arial";
     -fx-font-size: 12px;
-    -fx-text-fill: #2d2d2d;
+    -fx-text-fill: #3b3b3b;
     -fx-background-color: #CCCCCC;
     -fx-alignment: center;
     -fx-background-radius: 5px;
@@ -43,6 +43,17 @@
 
 .text-field:hover {
     -fx-border-width: 2px;
+}
+
+.room-VBox {
+    -fx-cursor: crosshair;
+    -fx-background-color: white;
+    -fx-effect: dropShadow(gaussian, #999999, 11, 0, 0, 0);
+}
+
+.tools-HBox {
+    -fx-padding: 10;
+    -fx-background-color: #eeeeef;
 }
 
 .color-picker {
