--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -34,7 +34,7 @@
     -fx-font-size: 12px;
     -fx-border-radius: 5px;
     -fx-background-radius: 5px;
-    -fx-background-color: white;
+    -fx-background-color: #FFFFFF;
     -fx-border-color: #cccccc;
     -fx-border-width: 1px;
     -fx-text-fill: #b5b5b5;
@@ -47,7 +47,7 @@
 
 .room-VBox {
     -fx-cursor: crosshair;
-    -fx-background-color: white;
+    -fx-background-color: #FFFFFF;
     -fx-effect: dropShadow(gaussian, #999999, 11, 0, 0, 0);
 }
 
@@ -111,5 +111,15 @@
 
 .toggle-button:selected {
     -fx-background-color: #9a9a9f;
+}
+
+.loading-pane {
+    -fx-background-color: #333333;
+}
+
+.loading-text {
+    -fx-font-family: "Arial";
+    -fx-fill: #FFFFFF;
+    -fx-font-size: 29px;
 }
 
